<resources>
  <string name="app_name">CampusCompass</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="blue_phone">Blue Phone</string>
  <string name="building">Building</string>
  <string name="restroom">Restroom</string>
  <string name="healthy_vending">Healthy Vending</string>
  <string name="dining">dining</string>
  <string name="computer_pod">Computer Pod</string>
  <string name="breast_feeding_station">Breast Feeding Station</string>
  <string name="title_activity_maps">Map</string>
  <string name="find_a_blue_phone">Emergency Find A Blue Phone</string>
  <string name="find_a_building">Find A Building</string>
  <string name="find_a_restroom">Find A Restroom</string>
  <string name="find_healthy_vending">Find Healthy Vending</string>
  <string name="find_dining">Find Dining</string>
  <string name="find_a_computer_pod">Find A Computer Pod</string>
  <string name="find_a_breast_feeding_station">Find A Breast Feeding Station</string>
  <string name="search_the_map">Search the Map!</string>
  <string name="image_title_0">Find Building</string>
  <string name="image_title_3">Find Computer Pod</string>
  <string name="image_title_6">Find Library</string>
  <string name="image_title_7">Find Metered Parking</string>
  <string name="image_title_8">Find Shuttle Stop</string>
  <string name="image_title_4">Find Healthy Vending</string>
  <string name="image_title_5">Find Dining</string>
  <string name="image_title_1">Find Gender Neutral Restroom</string>
  <string name="image_title_2">Find Blue Emergency Phone</string>
  <string name="no_description">No description available.</string>
  <string name="distance_away">Meters: </string>
  <string name="info">Info</string>
  <string name="go_here">Go Here!</string>
  <string name="item_image">Item Image</string>
  <string name="home">Home</string>
  <string name="default_description">A detailed description is not available at this time.</string>
  <string name="default_image_url_string">No image available.</string>
  <string name="default_title">No title available.</string>
  <string name="default_link_string">No informational link available.</string>
  <string name="unm_base_url">https://datastore.unm.edu/locations/</string>
  <string name="check_google_svc_version">isServicesOK: checking google services version</string>
  <string name="google_play_svcs_is_working">isServicesOK: Google Play Services is working</string>
  <string name="google_play_svcs_error_can_fix">isServicesOK: an error occurred but we can fix it</string>
  <string name="cannot_make_map_requests">You can\'t make map requests</string>
  <string name="could_not_load_resource">Could not load resources at</string>
  <string name="start_loc">Your Start Location</string>
  <string name="google_directions_error">Error connecting to Google for directions.</string>
  <string name="return_to_main_menu">[ Return to Main Menu ]</string>
  <string name="requires_gps">This application requires GPS to work properly, do you want to enable it?</string>
  <string name="yes">Yes</string>
  <string name="iv_main_frag_string">iv_main_frag_</string>
  <string name="tv_main_frag_string">tv_main_frag_</string>
  <string name="id">id</string>
  <string name="image_title_string">image_title_</string>
  <string name="type_string">string</string>
  <string name="html_signature"><![CDATA[<br]]></string>
  <string name="infopopupfrag_tag">InfoPopupFrag</string>
  <string name="google_base_query">google.navigation:q=</string>
  <string name="a_comma">,</string>
  <string name="google_walk_mode"><![CDATA[&mode=w]]></string>
  <string name="google_maps_package">com.google.android.apps.maps</string>
  <string name="a_space"/>
  <string name="no_title_available">No Title Available</string>
  <string name="find_a_building_">Find a building.</string>
  <string name="find_a_restroom_">Find a restroom.</string>
  <string name="find_an_emergency_blue_phone_">Find an emergency blue phone.</string>
  <string name="find_a_computer_pod_">Find a computer pod.</string>
  <string name="find_healthy_vending_">Find healthy vending.</string>
  <string name="find_dining_">Find dining.</string>
  <string name="find_a_library_">Find a library.</string>
  <string name="find_metered_parking_">Find metered parking.</string>
  <string name="find_a_shuttle_stop_">Find a shuttle stop.</string>
  <string name="search_using_key_words">Search using key words</string>
  <string name="reset">Reset</string>
  <string name="return_to_search">Return</string>
  <string name="directional_compass_image">Directional compass image.</string>
  <string name="get_directions">Get Directions</string>
</resources>
